--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,5 @@
-flask==3.0.0
+
+Flask 
 Flask-Cors==5.0.0
 google-api-core==2.24.1
 google-auth==2.37.0
@@ -16,10 +17,10 @@ grpc-google-iam-v1==0.14.0
 grpcio==1.70.0
 grpcio-status==1.70.0
 gunicorn==23.0.0
-html5lib==1.1
 httplib2==0.22.0
 httpx==0.28.1
 httpx-sse==0.4.0
+jiter==0.8.2
 langchain==0.3.16
 langchain-community==0.3.16
 langchain-core==0.3.32
@@ -28,7 +29,21 @@ langchain-openai==0.3.0
 langgraph==0.2.69
 langgraph-checkpoint==2.0.10
 langgraph-sdk==0.1.51
-pinecone[grpc]
+loguru==0.7.3
+marshmallow==3.26.0
+matplotlib==3.9.2
+mkl-service==2.4.0
+msgpack==1.1.0
+oauthlib==3.2.2
+openai==1.59.7
+oscrypto==1.3.0
+pinecone==5.4.2
+pinecone-plugin-inference==3.1.0
+pinecone-plugin-interface==0.0.7
+proto-plus==1.26.0
+protobuf==5.29.3
+protoc-gen-openapiv2==0.0.1
+pyasn1-modules==0.2.8
 pydantic==2.10.6
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
@@ -38,5 +53,21 @@ pyls-spyder==0.4.0
 pymongo==4.11
 pypdf==5.2.0
 PyQt5==5.15.10
+PyQtWebEngine==5.15.6
+python-bidi==0.6.3
+qrcode==8.0
+reportlab==4.2.5
 requests-oauthlib==2.0.0
+rsa==4.9
+setuptools==75.1.0
+shapely==2.0.6
+sqlparse==0.5.3
+svglib==1.5.1
+tiktoken==0.8.0
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzlocal==5.2
+uritools==4.0.3
+wheel==0.44.0
+xhtml2pdf==0.2.16
 
